# reachy_mini_conversation_app

./: .env.example  .gitignore  CONTRIBUTING.md  ELEVENLABS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  PERSONAPLEX_README.md  PERSONAPLEX_SETUP.md  PITCH_ARCHITECTURE_FIX.md  PITCH_SMOOTHING_IMPLEMENTATION.md  PROPORTIONAL_CONTROL_FAILED.md  PR_MESSAGE.md  RATE_LIMITING_FIX.md  README.md  RMSCRIPT_MERGE_SUMMARY.md  SMOOTH_PITCH_INTERPOLATION.md  app.py  index.html  pyproject.toml  rmscript_migration.md  start_moshi_server.sh  test.txt  test_microphone.py  verify_memory_system.py
.github/workflows/: hf-sync.yml  release.yml  tests.yml  uv-lock-check.yml
docs/: scheme.mmd
pollen_faces/: ds_model_vggface_detector_opencv_aligned_normalization_base_expand_0.pkl
script/custom_profiles_and_tools/: env.template
script/custom_profiles_and_tools/custom_tools/: new_custom_tool.py
scripts/: setup_web_agent.sh
scripts/custom_profiles_and_tools/: README.md  run.sh
scripts/custom_profiles_and_tools/custom_profile/: instructions.txt  tools.txt  voice.txt
scripts/custom_profiles_and_tools/custom_tools/: new_custom_tool.py
src/demos/food/: __init__.py
src/reachy_mini_conversation_app/: background_tasks.py  camera_worker.py  config.py  console.py  daemon_client.py  dance_emotion_moves.py  elevenlabs_agent.py  gradio_personality.py  gradium_realtime.py  headless_personality.py  headless_personality_ui.py  keyboard_realtime_handler.py  main.py  moves.py  openai_cost_tracking.py  openai_realtime.py  personaplex_realtime.py  profile_settings.py  prompts.py  rmscript_tools.py  tools.py  utils.py
src/reachy_mini_conversation_demo/: camera_worker.py  config.py  console.py  debug_audio_sync.py  main.py  main_chess.py  main_chess2.py  mcp_server.py  moves.py  openai_realtime.py  prompts.py  speech_tapper.py  tools.py  utils.py
src/use_cases/: __init__.py
stubs/fastrtc/: __init__.pyi
stubs/reachy_mini/: __init__.pyi
stubs/supervision/: __init__.pyi
stubs/transformers/: __init__.pyi
stubs/ultralytics/: __init__.pyi
tests/: __init__.py  conftest.py  test_background_tasks.py  test_camera_worker.py  test_config.py  test_console.py  test_dance_emotion_moves.py  test_gradio_personality.py  test_headless_personality.py  test_headless_personality_ui.py  test_main.py  test_memory_store.py  test_memory_synthesizer.py  test_moves.py  test_openai_realtime.py  test_prompts.py  test_utils.py
tests/audio/: conftest.py  test_head_wobbler.py  test_speech_tapper.py
tests/profiles/: __init__.py
tests/rmscript/: __init__.py  test.rmscript  test_compiler_integration.py  test_compiler_unit.py  test_language_features.py
tests/rmscript_adapters/: __init__.py  test_queue_adapter.py  test_queue_moves.py  test_rmscript_tools.py
tests/speaker_identification/: __init__.py  conftest.py  test_embeddings_store.py  test_tools.py  test_worker.py
tests/tools/: __init__.py  conftest.py  test_background_demo.py  test_camera.py  test_code.py  test_code_move_to_repo.py  test_commit_rules.py  test_core_tools.py  test_dance.py  test_do_nothing.py  test_execute_code.py  test_github_add.py  test_github_branch.py  test_github_ci_logs.py  test_github_clone.py  test_github_close_issue.py  test_github_close_pr.py  test_github_comment_issue.py  test_github_comment_pr.py  test_github_commit.py  test_github_create_pr.py  test_github_diff.py  test_github_discard.py  test_github_edit_file.py  test_github_exec.py  test_github_issue.py  test_github_list_files.py  test_github_list_issues.py  test_github_list_prs.py  test_github_list_repos.py  test_github_log.py  test_github_merge_pr.py  test_github_pr_checks.py  test_github_pr_comment.py  test_github_pull.py  test_github_push.py  test_github_read_file.py  test_github_rebase.py  test_github_reset.py  test_github_restore.py  (+12 more)
tests/vision/: conftest.py  test_processors.py  test_yolo_head_tracker.py
(+263 files in other folders)
