[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_conversation_demo"
version = "0.1.0"
authors = [{ name = "Pollen Robotics", email = "contact@pollen-robotics.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # "reachy_mini@git+ssh://git@github.com/pollen-robotics/reachy_mini@develop",
    "gradio==5.44.1",
    "openai==1.102.0",
    "deepface==0.0.95",
    "tf-keras==3.11.3",
    "fastrtc==0.0.30",

]


[project.optional-dependencies]
dev = ["pytest", "ruff==0.12.0"]

[project.scripts]
reachy-mini-conversation-demo = "reachy_mini_conversation_demo.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
reachy_mini = ["**/*"] # Inclut tous les fichiers non .py

[tool.ruff]
exclude = []
lint.extend-select = ["I", "D"]
lint.ignore = [
    "D203", # Incompatible with D211
    "D213", # Incompatible with D212
]
