[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_conversation_demo"
version = "0.1.0"
authors = [{ name = "Pollen Robotics", email = "contact@pollen-robotics.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    #Media
    "aiortc>=1.13.0,<2.0.0",
    "fastrtc@git+ssh://git@github.com/gradio-app/fastrtc.git@main", #Bump to PyPI after the next release
    "gradio>=5.49.0,<5.50.0",
    "huggingface_hub>=0.34.4,<0.36",
    "opencv-python>=4.12.0.88,<4.13",
    "PyGObject>=3.42.2,<=3.46.0",

    #Environment variables
    "python-dotenv,>=1.1.1,<2.0.0",

    #OpenAI
    "openai>=2.1,<2.3.0",

    #Reachy mini    
    "reachy_mini_dances_library@git+ssh://git@github.com/pollen-robotics/reachy_mini_dances_library@main",
    "reachy_mini_toolbox@git+ssh://git@github.com/pollen-robotics/reachy_mini_toolbox@main",
    "reachy_mini@git+ssh://git@github.com/pollen-robotics/reachy_mini@develop",
]

[project.optional-dependencies]
local_vision = ["torch>=2.8.0,<2.9.0", "transformers>=4.57.0,4.58.0"]
yolo_vision = ["ultralytics>=8.3.206,<8.4.0", "supervision>=0.26.1,<0.27.0"]
mediapipe_vision = ["mediapipe>=0.10.14,<0.11.0"]
all_vision = [
  "reachy_mini_conversation_demo[local_vision]",
  "reachy_mini_conversation_demo[yolo_vision]",
  "reachy_mini_conversation_demo[mediapipe_vision]",
]

[dependency-groups]
dev = ["pytest>=8.4.2,<9.0.0", "ruff==0.12.0"]

[project.scripts]
reachy-mini-conversation-demo = "reachy_mini_conversation_demo.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reachy_mini_conversation_demo = ["images/*"]

[tool.ruff]
line-length = 119
exclude = [".venv", "dist", "build", "**/__pycache__", "*.egg-info", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
]
ignore = [
  "E501",  # handled by formatter
  "D100",  # ignore missing module docstrings
  "D203",  # blank line before class docstring (conflicts with D211)
  "D213",  # summary on second line (conflicts with D212)
]

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
no-lines-before = ["standard-library", "local-folder"]
known-local-folder = ["reachy_mini_conversation_demo"]
known-first-party = ["reachy_mini", "reachy_mini_dances_library", "reachy_mini_toolbox"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"